fix: stable scrollbar
* No to layout shift!

--- a/src/styles/minimal.css
+++ b/src/styles/minimal.css
@@ -4,6 +4,10 @@
   --link-color: #1447e6;
 }
 
+html {
+  scrollbar-gutter: stable;
+}
+
 /* Credits: http://bettermotherfuckingwebsite.com */
 body {
   display: flex;
